fixes spacing in mobile layout for home page

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -24,13 +24,13 @@ main {
   min-height: 100vh;
   max-height: 100vh;
   display: grid;
-  @media (max-width: $sm) {
+  @media (max-width: $md) {
     max-height: fit-content;
   }
 }
 
   .home-container {
-    grid-template-columns: 1fr 1fr 1fr 10% 10% 10% 10% 10%;
+    grid-template-columns: 1fr 20% 10% 10% 10% 10% 10% 10%;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 2em 80px;
     gap: 1em 2em;
     grid-template-areas:
@@ -42,11 +42,11 @@ main {
       ". page-description sm-links bottom-nav-buttons bottom-nav-buttons img4 img4 ."
       ". . . . . . . ."
       "sticky-footer sticky-footer sticky-footer sticky-footer sticky-footer sticky-footer sticky-footer sticky-footer";
-      @media (max-width: $sm) {
+      @media (max-width: $md) {
         width: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 5% 5% 1fr 8% 1fr 1fr 1fr 1fr 11%;
+        grid-template-rows: 5% 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         gap: 0px 0px;
         grid-template-areas:
           "sticky-footer sticky-footer"
@@ -63,52 +63,54 @@ main {
       .title-container {
         text-align: end;
         grid-area: title-container;
-        @media (max-width: $sm) {
+        @media (max-width: $md) {
           display: flex;
           align-items: center;
           justify-content: center;
-          width: 100%;
         }
         .page-title {
           color: $primary;
           font-size: 7em;
           letter-spacing: 15;
-          @media (max-width: $sm) {
+          @media (max-width: $md) {
             letter-spacing: 0;
             font-size: 18vw;
+            text-align: center;
             margin: 0;
           }
         }
       }
       .page-description { 
         grid-area: page-description;
-        background-color: $secondary;
-        display: flex;
-        padding: 1.5em 0.5em 1em 1em;
-        border-radius: 1em;
+        @media (max-width: $md) {
+          display: flex;    
+          align-items: center;
+        }
         .home-description {
           font-family: 'Poppins';
-          color: white;
-          @media (max-width: $sm) {
+          color: $text_primary;
+          font-size: 1.25em;
+          @media (max-width: $md) {
             font-size: x-large;
             width: 100vw;
+            padding: 2em 1em 0em 1em;
+            text-align: center;
           }
         }
       }
       
       .sm-links { 
-        grid-area: sm-links; 
-        background-color: $secondary;
+        grid-area: sm-links;
         padding: 0em 0em 0em 0em;
         td {
-          font-size: xx-large;
+          font-size: 1.5em;
           letter-spacing: 0.2em;
-          color: white;
+          color: $accent;
           display: flex;
           p {
             margin-bottom: 0%;
           }
-          @media (max-width: $sm) {
+          @media (max-width: $md) {
             line-height: 1.2em;
             width: 100vw;
             background-color: $text_accent;
@@ -144,7 +146,7 @@ main {
       
       .bottom-nav-buttons { 
         grid-area: bottom-nav-buttons;
-        @media (max-width: $sm) {
+        @media (max-width: $md) {
           grid-area: nav-buttons1;
           display: flex;
           flex-direction: column;
@@ -160,10 +162,10 @@ main {
           padding: 1em 1em 1em 2em;
           border-radius: 3em;
           margin-bottom: 1em;
-          @media (max-width: $sm) {
+          @media (max-width: $md) {
             margin: 0em 0em 0.5em 0em;
             padding: 0.75em 0.5em 0.75em 0.5em;
-            width: 10rem;
+            width: 100%;
             justify-content: center;
           }
           &:hover {
@@ -173,13 +175,13 @@ main {
           .icon-button {
             font-size: 2em;
             padding-right: 0.25em;
-            @media (max-width: $sm) {
+            @media (max-width: $md) {
               font-size: 1.25em;
             }
           }
           h2 {
             margin: 0;
-            @media (max-width: $sm) {
+            @media (max-width: $md) {
               font-size: x-large;
             }
           }
@@ -189,7 +191,7 @@ main {
       
       .top-nav-buttons { 
         grid-area: top-nav-buttons;
-        @media (max-width: $sm) {
+        @media (max-width: $md) {
           grid-area: nav-buttons2;
           display: flex;
           flex-direction: column;
@@ -206,10 +208,10 @@ main {
           padding: 1em 2em 1em 1em;
           border-radius: 3em;
           margin-top: 1em;
-          @media (max-width: $sm) {
+          @media (max-width: $md) {
             margin: 0em 0em 0.5em 0em;
             padding: 0.75em 0.5em 0.75em 0.5em;
-            width: 10rem;
+            width: 100%;
             justify-content: center;
           }
           &:hover {
@@ -219,13 +221,13 @@ main {
           .icon-button {
             font-size: 2em;
             padding-right: 0.25em;
-            @media (max-width: $sm) {
+            @media (max-width: $md) {
               font-size: 1.25em;
             }
           }
           h2 {
             margin: 0;
-            @media (max-width: $sm) {
+            @media (max-width: $md) {
               font-size: x-large;
             }
           }
@@ -458,7 +460,7 @@ main {
   justify-content: center;
   background-color: $secondary;
   height: 80px;
-  @media (max-width: $sm) {
+  @media (max-width: $md) {
     justify-content: flex-start;
   }
   #main-nav {
@@ -468,7 +470,7 @@ main {
           color: $background;
           font-weight: 600;
           font-size: 3em;
-          @media (max-width: $sm) {
+          @media (max-width: $md) {
             font-size: 2em;
           }
         }
